log
Fri 05 May 2023 06:23:24 PM UTC: 
 tests:  0|5
total_score: 0/70
e86e05e
Fri 05 May 2023 06:27:17 PM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
e8d1de0
Fri 05 May 2023 06:29:59 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
18bd14e
Fri 05 May 2023 06:31:57 PM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
e21a2f6
Fri 05 May 2023 06:33:42 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
130f836
Fri 05 May 2023 06:34:08 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
75ce8e4
Fri 05 May 2023 06:42:50 PM UTC: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:62:46: error: expected ‘;’ before ‘else’
   62 |         if(fila[n->sudo[i][k]] == 1) return 0
      |                                              ^
      |                                              ;
   63 |         else fila[n->sudo[i][k]] = 1
      |         ~~~~                                  
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |   int columna[10];
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
80d702c
Fri 05 May 2023 06:44:40 PM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:62:46: error: expected ‘;’ before ‘else’
   62 |         if(fila[n->sudo[i][k]] == 1) return 0
      |                                              ^
      |                                              ;
   63 |         else fila[n->sudo[i][k]] = 1
      |         ~~~~                                  
sudoku.c:67:49: error: expected ‘;’ before ‘else’
   67 |         if(columna[n->sudo[k][i]] == 1) return 0
      |                                                 ^
      |                                                 ;
   68 |         else columna[n->sudo[k][i]] = 1
      |         ~~~~                                     
sudoku.c:72:11: error: unused variable ‘subMatrizColumna’ [-Werror=unused-variable]
   72 |       int subMatrizColumna = 3*(i%3) + (k%3);
      |           ^~~~~~~~~~~~~~~~
sudoku.c:71:11: error: unused variable ‘subMatrizFila’ [-Werror=unused-variable]
   71 |       int subMatrizFila = 3*(i/3) + (k/3);
      |           ^~~~~~~~~~~~~
sudoku.c:49:7: error: variable ‘matriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int matriz[10];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2bf5776
Fri 05 May 2023 06:45:53 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:7: error: ‘subMatriz’ undeclared (first use in this function); did you mean ‘matriz’?
   56 |       subMatriz[aux] = 0;
      |       ^~~~~~~~~
      |       matriz
sudoku.c:56:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:62:46: error: expected ‘;’ before ‘else’
   62 |         if(fila[n->sudo[i][k]] == 1) return 0
      |                                              ^
      |                                              ;
   63 |         else fila[n->sudo[i][k]] = 1
      |         ~~~~                                  
sudoku.c:67:49: error: expected ‘;’ before ‘else’
   67 |         if(columna[n->sudo[k][i]] == 1) return 0
      |                                                 ^
      |                                                 ;
   68 |         else columna[n->sudo[k][i]] = 1
      |         ~~~~                                     
sudoku.c:75:78: error: expected ‘;’ before ‘else’
   75 |         if(subMatriz[n->sudo[subMatrizFila][subMatrizColumna]] == 1) return 0
      |                                                                              ^
      |                                                                              ;
   76 |         else subMatriz[n->sudo[subMatrizFila][subMatrizColumna]] = 1
      |         ~~~~                                                                  
sudoku.c:49:7: error: unused variable ‘matriz’ [-Werror=unused-variable]
   49 |   int matriz[10];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9d4bfba
Fri 05 May 2023 06:46:26 PM UTC: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  6|2
total_score: 45/70
b7d03e8
Fri 05 May 2023 06:47:44 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:105:8: error: expected expression before ‘int’
  105 |     if(int i = 0; i < 10; i++){
      |        ^~~
sudoku.c:106:10: error: expected expression before ‘int’
  106 |       if(int j = 0; j < 10; j++){
      |          ^~~
sudoku.c:107:20: error: ‘i’ undeclared (first use in this function)
  107 |         if(n->sudo[i][j]==0) return 0;
      |                    ^
sudoku.c:107:20: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:107:23: error: ‘j’ undeclared (first use in this function)
  107 |         if(n->sudo[i][j]==0) return 0;
      |                       ^
Compilation failed
2e1cebf
Fri 05 May 2023 06:48:01 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
5cce36e
Fri 05 May 2023 06:48:15 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
cb54552
